added docs to shortcuts

--- a/index.html
+++ b/index.html
@@ -255,6 +255,14 @@ layout: base
                                     Settings
                                 </td>
                             </tr>
+                            <tr>
+                                <td>
+                                    <kbd>Ctrl + /</kbd>
+                                </td>
+                                <td>
+                                    Docs
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
