added keybind to search docs with highlighted word (ctrl + ;)

--- a/index.html
+++ b/index.html
@@ -263,6 +263,14 @@ layout: base
                                     Docs
                                 </td>
                             </tr>
+                            <tr>
+                                <td>
+                                    <kbd>Ctrl + ;</kbd>
+                                </td>
+                                <td>
+                                    Search docs with selected word
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
