removed some jquery

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@ layout: base
                     </a>
                     <ul class="dropdown-menu" role="menu">
                         <li>
-                            <a href="#" class="load-exmaple" data-source="/sources/hello-world.asm">Hello World</a>
+                            <a href="#" class="load-example" data-source="/sources/hello-world.asm">Hello World</a>
                         </li>
                         <li>
-                            <a href="#" class="load-exmaple" data-source="/sources/hello-corelib.asm">Hello Corelib</a>
+                            <a href="#" class="load-example" data-source="/sources/hello-corelib.asm">Hello Corelib</a>
                         </li>
                         <li>
-                            <a href="#" class="load-exmaple" data-source="/sources/fileman.asm">Fileman</a>
+                            <a href="#" class="load-example" data-source="/sources/fileman.asm">Fileman</a>
                         </li>
                     </ul>
                 </li>
@@ -94,7 +94,7 @@ layout: base
                     </ul>
                 </li>
                 <li>
-                    <button class="btn btn-primary navbar-btn" disabled="disabled" id="run-project">
+                    <button class="btn btn-primary navbar-btn" disabled="disabled" id="run_project">
                         <span class="glyphicon glyphicon-play"></span> Run 
                     </button>
                 </li>
