Basically finished Jquery refactor

--- a/index.html
+++ b/index.html
@@ -307,51 +307,51 @@ layout: base
                 </div>
                 <div class="modal-body">
                     <div class="row-fluid">
-                        <button class="btn btn-primary" data-package="core/settings">Install</button>
+                        <button class="btn btn-primary package" data-package="core/settings">Install</button>
                         core/settings
                     </div>
                     <div class="row-fluid">
-                        <button class="btn btn-primary" data-package="core/castle">Install</button>
+                        <button class="btn btn-primary package" data-package="core/castle">Install</button>
                         core/castle
                     </div>
                     <div class="row-fluid">
-                        <button class="btn btn-primary" data-package="core/threadlist">Install</button>
+                        <button class="btn btn-primary package" data-package="core/threadlist">Install</button>
                         core/threadlist
                     </div>
                     <div class="row-fluid">
-                        <button class="btn btn-primary" data-package="core/textview">Install</button>
+                        <button class="btn btn-primary package" data-package="core/textview">Install</button>
                         core/textview
                     </div>
                     <div class="row-fluid">
-                        <button class="btn btn-primary" data-package="core/configlib">Install</button>
+                        <button class="btn btn-primary package" data-package="core/configlib">Install</button>
                         core/configlib
                     </div>
                     <div class="row-fluid">
-                        <button class="btn btn-primary" data-package="extra/bed">Install</button>
+                        <button class="btn btn-primary package" data-package="extra/bed">Install</button>
                         extra/bed
                     </div>
                     <div class="row-fluid">
-                        <button class="btn btn-primary" data-package="extra/fileman">Install</button>
+                        <button class="btn btn-primary package" data-package="extra/fileman">Install</button>
                         extra/fileman
                     </div>
                     <div class="row-fluid">
-                        <button class="btn btn-primary" data-package="extra/demos">Install</button>
+                        <button class="btn btn-primary package" data-package="extra/demos">Install</button>
                         extra/demos
                     </div>
                     <div class="row-fluid">
-                        <button class="btn btn-primary" data-package="extra/fx3dlib">Install</button>
+                        <button class="btn btn-primary package" data-package="extra/fx3dlib">Install</button>
                         extra/fx3dlib
                     </div>
                     <div class="row-fluid">
-                        <button class="btn btn-primary" data-package="extra/periodic">Install</button>
+                        <button class="btn btn-primary package" data-package="extra/periodic">Install</button>
                         extra/periodic
                     </div>
                     <div class="row-fluid">
-                        <button class="btn btn-primary" data-package="extra/libc">Install</button>
+                        <button class="btn btn-primary package" data-package="extra/libc">Install</button>
                         extra/libc
                     </div>
                     <div class="row-fluid">
-                        <button class="btn btn-primary" data-package="ports/phoenix">Install</button>
+                        <button class="btn btn-primary package" data-package="ports/phoenix">Install</button>
                         ports/phoenix
                     </div>
                 </div>
