Added getting started link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ layout: base
                     </a>
                     <ul class="dropdown-menu" role="menu">
                         <li>
-                            <a href="#">Getting Started</a>
+                            <a href="http://www.knightos.org/documentation/tutorials/getting-started/" target='_blank'>Getting Started</a>
                         </li>
                     </ul>
                 </li>
