--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@ layout: base
     </div>
 </div>
 <script data-main="/scripts/main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js"></script>
-
+<script type='text/javascript'>jsonTree('http://www.knightos.org/documentation/reference/data.json', '.doc-body') </script>
 
 <link rel="stylesheet" href="/css/base.css"/>
 <link rel="stylesheet" href="/css/index.css"/>
-<link rel="stylesheet" href="/jstree/jstree.min.css" />
+<link rel="stylesheet" href="/css/jsonTree.css" />
