removed local jsonTree, switched to hosted

--- a/index.html
+++ b/index.html
@@ -368,4 +368,4 @@ layout: base
 
 <link rel="stylesheet" href="/css/base.css"/>
 <link rel="stylesheet" href="/css/index.css"/>
-<link rel="stylesheet" href="/css/jsonTree.css" />
+<link rel="stylesheet" href="http://maxleiter.github.io/jsonTree/dist/css/jsonTree.css" />
